--- a/app/src/main/res/layout/activity_admin_category.xml
+++ b/app/src/main/res/layout/activity_admin_category.xml
@@ -144,4 +144,19 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/admin_logout_btn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="15dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="Logout"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+        android:textAllCaps="false"
+        />
+
 </RelativeLayout>
