--- a/app/src/main/res/layout/cart_items_layout.xml
+++ b/app/src/main/res/layout/cart_items_layout.xml
@@ -14,48 +14,39 @@
 
         <TextView
             android:id="@+id/cart_product_name"
-            android:layout_width="160dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:text="Product Name"
             android:textColor="@android:color/white"
-            android:textSize="15dp"
+            android:textSize="20dp"
             android:layout_marginLeft="2dp"
             android:textStyle="bold"
             />
 
         <TextView
-            android:id="@+id/cart_product_quantity"
-            android:layout_width="160dp"
+            android:id="@+id/cart_product_price"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:text="Product Quantity"
+            android:text="Product Price"
             android:textAlignment="viewEnd"
             android:textColor="@android:color/white"
-            android:textSize="15dp"
+            android:textSize="20dp"
             android:layout_marginRight="2dp"
             android:textStyle="bold"
             />
 
-        <ImageView
-            android:id="@+id/cart_product_image"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_below="@+id/cart_product_quantity"
-            android:scaleType="centerCrop"
-            android:layout_marginTop="2dp"
-            />
-
         <TextView
-            android:id="@+id/cart_product_price"
+            android:id="@+id/cart_product_quantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Product Price"
+            android:text="Product Quantity"
             android:textColor="@android:color/white"
             android:textSize="18dp"
             android:textStyle="bold"
-            android:layout_below="@+id/product_image"
-            android:gravity="center"
-            android:layout_marginTop="15dp"
+            android:layout_below="@+id/cart_product_price"
+            android:gravity="left"
+            android:layout_marginTop="25dp"
             />
 
     </RelativeLayout>
