--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -51,14 +51,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/settings_profile_image"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:src="@drawable/profile"
-        android:layout_below="@+id/app_bar_settings"
-        android:layout_marginTop="20dp"
+        android:layout_width="150dp"
+        android:layout_height="90dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/app_bar_settings"
+        android:src="@drawable/profile"
         />
 
     <TextView
