--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -12,16 +12,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <ImageView
         android:id="@+id/user_profile_image"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:src="@drawable/profile"
+        android:layout_width="150dp"
+        android:layout_height="90dp"
         android:layout_gravity="center"
-        app:civ_border_width="2dp"
-        app:civ_border_color="@android:color/white"/>
-
+        android:src="@drawable/profile"
+        />
 
     <TextView
         android:id="@+id/user_profile_name"
